Add entities and initial database migration

--- a/CarRental.Server/appsettings.json
+++ b/CarRental.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CarRentalDbConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRentalDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
