--- a/CarRental.Server/appsettings.json
+++ b/CarRental.Server/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "SecretKey": "PRIVATE_KEY_DONT_SHARE_LONG_LONG_123456",
+    "Issuer": "CarRentalIssuer",
+    "Audience": "CarRentalAudience"
+  },
   "ConnectionStrings": {
     "CarRentalDbConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRentalDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
